objects/JSONTestObj__c.object
<CustomObject>
    <fields>
        <fullName>age__c</fullName>
        <label>age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>firstName__c</fullName>
        <label>firstName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastName__c</fullName>
        <label>lastName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>JSONTestObj</label>
    <nameField>
        <label>JSONTestObj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JSONTestObjs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>